--- a/contact.html
+++ b/contact.html
@@ -114,7 +114,7 @@
                         <div class="map">
                             <h3>Find Us On The Map</h3>
                             <div id="contact-map" class="contact-map">
-                                <img src="https://images.unsplash.com/photo-1569336415962-a4bd9f69cd83?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1631&q=80" alt="Map location">
+                                <img src="https://api.unsplash.com/search/photos?query=${country}+restaurant+food&per_page=9&client_id=SDSSqp5l6g2sUVKcLODwrHHJrs3shrLMiTrFkwl-j9M" alt="Map location">
                             </div>
                         </div>
                     </div>
@@ -254,7 +254,7 @@
     <button id="back-to-top" aria-label="Back to top">
         <i class="fas fa-chevron-up"></i>
     </button>
-    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+
     <script src="scripts.js"></script>
     <script src="contact.js"></script>
 </body>
