--- a/explore.html
+++ b/explore.html
@@ -80,16 +80,16 @@
             <div class="container">
                 <h2>Share This Destination</h2>
                 <div class="share-buttons">
-                    <a href="#" class="share-btn facebook" aria-label="Share on Facebook">
+                    <a href="https://www.facebook.com" class="share-btn facebook" aria-label="Share on Facebook">
                         <i class="fab fa-facebook-f"></i>
                     </a>
-                    <a href="#" class="share-btn twitter" aria-label="Share on Twitter">
+                    <a href="https://www.twitter.com" class="share-btn twitter" aria-label="Share on Twitter">
                         <i class="fab fa-twitter"></i>
                     </a>
-                    <a href="#" class="share-btn pinterest" aria-label="Share on Pinterest">
+                    <a href="https://www.pinterest.com" class="share-btn pinterest" aria-label="Share on Pinterest">
                         <i class="fab fa-pinterest-p"></i>
                     </a>
-                    <a href="#" class="share-btn whatsapp" aria-label="Share on WhatsApp">
+                    <a href="https://www.whatsapp.com" class="share-btn whatsapp" aria-label="Share on WhatsApp">
                         <i class="fab fa-whatsapp"></i>
                     </a>
                 </div>
